--- a/style.css
+++ b/style.css
@@ -3,36 +3,37 @@ body {
 }
 
 .header {
-  	display : grid;
-	grid-template-areas : "h1 h2";
-	grid-template-column : 1fr 1fr;
-	background-color : #016789;
-	color : #fff;
-	margin : 0;
+	background-color: #547443;
+	color: #fff;
+	text-align: center;
+	margin: auto 0;
 }
 
-.header h1{
-	text-align : right;
-	margin-right : 5px;
-}
-
-.header h2{
-	margin-top : 30px;
+.header h1 h2 {
+	padding-bottom: 30px;
 }
 
 .main {
-	border-left : solid 1px #000000;
-	border-right : solid 1px #000000;
+	border-top: solid 1px #000;
+	border-bottom: solid 1px #000;
+	padding: 30px;
+	margin: auto 0;
 }
 
-.container{
+.container {
 	display : grid;
-	grid-template-areas : "leftside main rightside";
-	grid-template-columns : 1fr 3fr 1fr;
+	grid-template-areas : "left right";
+	grid-template-columns : 1fr 1fr;
+	padding: 30px;
+	margin: auto 0;
 }
 
 .footer {
-  border-top: solid 1px #000000;
+  	padding: 30px;
+}
+
+.footer h2 {
+	text-decoration: underline #000;
 }
 
 
