--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 body {
   	margin: 0;
+	background-color: #f5f5f5;
 }
 
 .header {
 	background-color: #547443;
 	color: #fff;
 	text-align: center;
-	margin: auto 0;
 }
 
-.header h1 h2 {
-	padding-bottom: 30px;
+.header > h1,h2 {
+	padding-bottom: 15px;
 }
 
 .main {
@@ -21,19 +21,15 @@ body {
 }
 
 .container {
-	display : grid;
-	grid-template-areas : "left right";
-	grid-template-columns : 1fr 1fr;
-	padding: 30px;
-	margin: auto 0;
+	display : flex;
 }
 
 .footer {
+	display: flex;
   	padding: 30px;
+	margin: auto 0;
 }
 
-.footer h2 {
-	text-decoration: underline #000;
+.footer > div > h2 {
+	text-decoration: underline black;
 }
-
-
