--- a/style.css
+++ b/style.css
@@ -7,29 +7,36 @@ body {
 	background-color: #547443;
 	color: #fff;
 	text-align: center;
+	margin: 0;
 }
 
-.header > h1,h2 {
+.header h1,h2 {
 	padding-bottom: 15px;
 }
 
 .main {
 	border-top: solid 1px #000;
 	border-bottom: solid 1px #000;
-	padding: 30px;
+	padding: 15px;
 	margin: auto 0;
 }
 
 .container {
 	display : flex;
+	margin: auto 0;
+}
+
+.left {
+	border-right: solid 1px #000;
+	padding-right: 5px;
 }
 
 .footer {
 	display: flex;
-  	padding: 30px;
+  	padding: 15px;
 	margin: auto 0;
 }
 
 .footer > div > h2 {
-	text-decoration: underline black;
+	text-decoration: underline #000;
 }
