--- a/style.css
+++ b/style.css
@@ -1,42 +1,38 @@
 body {
-  	margin: 0;
 	background-color: #f5f5f5;
+	margin: 0;
 }
 
 .header {
 	background-color: #547443;
 	color: #fff;
 	text-align: center;
-	margin: 0;
+	margin: 0 auto;
 }
 
 .header h1,h2 {
-	padding-bottom: 15px;
+	padding-bottom: 10px;
 }
 
 .main {
 	border-top: solid 1px #000;
 	border-bottom: solid 1px #000;
-	padding: 15px;
-	margin: auto 0;
+	padding: 10px;
+	margin: 0 auto;
 }
 
 .container {
 	display : flex;
-	margin: auto 0;
+	margin: 0 auto;
 }
 
 .left {
 	border-right: solid 1px #000;
-	padding-right: 5px;
+	padding-right: 2.5px;
 }
 
 .footer {
 	display: flex;
-  	padding: 15px;
-	margin: auto 0;
-}
-
-.footer > div > h2 {
-	text-decoration: underline #000;
+  	padding: 10px;
+	margin: 0 auto;
 }
