--- a/style.css
+++ b/style.css
@@ -7,23 +7,23 @@ body {
 	background-color: #547443;
 	color: #fff;
 	text-align: center;
-	margin: 0 auto;
+	margin: 0;
 }
 
 .header h1,h2 {
-	padding-bottom: 10px;
+	padding-bottom: 5px;
 }
 
 .main {
 	border-top: solid 1px #000;
 	border-bottom: solid 1px #000;
-	padding: 10px;
+	padding: 5px;
 	margin: 0 auto;
+	text-align: center;
 }
 
 .container {
-	display: flex;
-	margin: 0 auto;
+	display: inline-flex;
 }
 
 .left {
@@ -31,8 +31,12 @@ body {
 	padding-right: 2.5px;
 }
 
+.right {
+	padding-left: 2.5px;
+}
+
 .footer {
 	display: flex;
-  	padding: 10px;
+  	padding: 5px;
 	margin: 0 auto;
 }
