--- a/style.css
+++ b/style.css
@@ -10,33 +10,27 @@ body {
 	margin: 0;
 }
 
-.header h1,h2 {
-	padding-bottom: 5px;
-}
-
 .main {
 	border-top: solid 1px #000;
 	border-bottom: solid 1px #000;
-	padding: 5px;
 	margin: 0 auto;
-	text-align: center;
 }
 
 .container {
-	display: inline-flex;
+	display: flex;
+	justify-content: center;
 }
 
 .left {
 	border-right: solid 1px #000;
-	padding-right: 2.5px;
+	margin-right: 2.5px;
 }
 
 .right {
-	padding-left: 2.5px;
+	margin-left: 2.5px;
 }
 
 .footer {
 	display: flex;
-  	padding: 5px;
 	margin: 0 auto;
 }
