--- a/style.css
+++ b/style.css
@@ -1,36 +1,37 @@
 body {
-	background-color: #f5f5f5;
+	background-color: #fff;
 	margin: 0;
 }
 
 .header {
-	background-color: #547443;
+	background-color: #016789;
 	color: #fff;
-	text-align: center;
+	border-bottom: solid 1px #000000;
 	margin: 0;
 }
 
-.main {
-	border-top: solid 1px #000;
-	border-bottom: solid 1px #000;
-	margin: 0 auto;
+.header h1, h2 {
+	text-align: center;
+	margin-top: 5px;
 }
+
+/* 
+.main {
+	border-left: solid 1px #000000;
+	border-right: solid 1px #000000;
+} */
 
 .container {
 	display: flex;
-	justify-content: center;
 }
 
 .left {
-	border-right: solid 1px #000;
-	margin-right: 2.5px;
 }
 
 .right {
-	margin-left: 2.5px;
 }
 
 .footer {
 	display: flex;
-	margin: 0 auto;
+	border-top: solid 1px #000000;
 }
