--- a/style.css
+++ b/style.css
@@ -1,37 +1,37 @@
 body {
-	background-color: #fff;
+	background-color: #f5f5f5;
 	margin: 0;
+	-webkit-text-size-adjust: 100%;
 }
 
 .header {
-	background-color: #016789;
-	color: #fff;
-	border-bottom: solid 1px #000000;
-	margin: 0;
-}
-
-.header h1, h2 {
 	text-align: center;
-	margin-top: 5px;
+	border-bottom: solid 1px #000;
+	color: #fff;
+	background-color: #000;
+	margin: 0;
+	width: 100%;
 }
-
-/* 
+ 
 .main {
-	border-left: solid 1px #000000;
-	border-right: solid 1px #000000;
-} */
+	margin: 0 auto;
+	text-align: center;
+}
 
 .container {
-	display: flex;
+	display: inline-flex;
 }
 
 .left {
+	border-right: solid 1px #000;
+	margin-right: 2.5px
 }
 
 .right {
+	margin-left: 2.5px;
 }
 
 .footer {
 	display: flex;
-	border-top: solid 1px #000000;
+	border-top: solid 1px #000;
 }
