--- a/style.css
+++ b/style.css
@@ -1,73 +1,32 @@
-body{
-	margin : 0;
+body {
+	margin: 0;
 }
 
-#header{
-	display : grid;
-	grid-template-areas : "h1 h2";
-	grid-template-column : 1fr 1fr;
-	background-color : #016789;
-	color : #fff;
-	margin : 0;
+.header {
+	display: grid;
+	grid-template-areas: "h1 h2";
+	grid-template-column: 1fr 1fr;
+	background-color: #016789;
+	color: #fff;
+	margin: 0;
 }
 
-#header h1{
-	text-align : right;
-	margin-right : 5px;
+.header h1 {
+	text-align: right;
+	margin-right: 5px;
 }
 
-#header h2{
-	margin-top : 30px;
+.header h2 {
+	margin-top: 30px;
 }
 
-.container{
-	display : grid;
-	grid-template-areas : "leftside main rightside";
-	grid-template-columns : 1fr 3fr 1fr;
+.container {
+	display: grid;
+	grid-template-areas: "leftside main rightside";
+	grid-template-columns: 1fr 3fr 1fr;
 }
 
-.sideSpace{
-	background-color : #ddd;
-}
-
-.titles{
-	text-align : center;
-}
-
-.image {
-	display : grid;
-	grid-template-areas : "marginLeft img marginRight";
-	grid-template-columns : 1fr 3fr 1fr;
-}
-
-#menu{
-	display : grid;
-	grid-template-areas : "MSDS suppliers reagents return";
-	grid-template-columns : 1fr 1fr 1fr 1fr;
-	text-align : center;
-}
-
-#structureAndRegistration{
-	display : grid;
-	grid-template-areas : "structure registration place";
-	grid-template-columns : 1fr 1fr 1fr;
-}
-
-#structure{
-	text-align : center;
-}
-
-#GHSandProperties{
-	display : grid;
-	grid-template-areas : "GHS properties";
-	grid-template-columns : 1fr 1fr;
-}
-
-#GHS{
-	text-align : center;
-}
-
-.container #main{
+.container {
 	border-left : solid 1px #000000;
 	border-right : solid 1px #000000;
 }
