--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ body {
 }
 
 .header {
-	display: grid;
+/* 	display: grid;
 	grid-template-areas: "h1 h2";
-	grid-template-column: 1fr 1fr;
+	grid-template-column: 1fr 1fr; */
 	background-color: #016789;
 	color: #fff;
 	margin: 0;
